<resources>
    <!-- Общие. -->
    <string name="app_name">AvitoWeatherForecast</string>
    <string name="about_app" translatable="false">О приложении</string>
    <string name="app_description" translatable="false">Приложение \"Прогноз погоды\"</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>
    <string name="exit" translatable="false">Выход</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="in_develop" translatable="false">В разработке</string>
    <string name="error_weather_loading" translatable="false">Ошибка загрузки погоды</string>
    <string name="error_find_geolocation" translatable="false">Ошибка поиска геолокации</string>
    <string name="do_you_want_exit" translatable="false">Вы хотите выйти?</string>
    <string name="no_permission_geolocation" translatable="false">Отсутствует разрешение на поиск по геолокации</string>
    <string name="geolocation" translatable="false">Геолокация</string>
    <string name="access_to" translatable="false">Доступ к</string>
    <string name="to_use_the_function" translatable="false">Для работы с функцией</string>
    <string name="need_give_permission" translatable="false">необходимо дать соответствующее разрешение</string>
    <string name="agree" translatable="false">Согласен</string>
    <string name="need_some_time" translatable="false">Подождите немного</string>
    <string name="location_added" translatable="false">Локация добавлена</string>
    <string name="application_error" translatable="false">Ошибка приложения</string>

    <!-- Строки для Greetings Fragment. -->
    <string name="greetings_first_text_first">Добро пожаловать в приложение "Прогноз погоды"</string>
    <string name="greetings_second_text">Используйте удобное боковое меню</string>
    <string name="greetings_threeth_text">Окрыть погоду в Вашей локации</string>
    <string name="greetings_threeth_text_second">Выбрать город, который будет открываться первым</string>
    <string name="letStart">Начнём</string>

    <!-- Строки для Settings. -->
    <string name="style">Style</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="apply">Apply</string>
    <string name="watch_greetings_again">Посмотреть приветсвие ещё раз</string>

    <!-- Строки для contentDescription. -->
    <string name="appbar">appbar</string>
    <string name="function_button">function_button</string>
    <string name="find_city">Найти город</string>
    <string name="navigation_indicator_1">navigation_indicator_first</string>
    <string name="navigation_indicator_2">navigation_indicator_second</string>
    <string name="navigation_indicator_3">navigation_indicator_threeth</string>
    <string name="header">header</string>
    <string name="greetings">greetings</string>

    <!-- Строки для fragment_weather_fc... -->
    <string name="pressure">Давление</string>
    <string name="value">Значение</string>
    <string name="dim_mm_r_s">мм рт.ст</string>
    <string name="temperature">Температура</string>
    <string name="dim_g_c">°C</string>
    <string name="wind">Ветер</string>
    <string name="dim_mc">м/с</string>
    <string name="value_dim_mc">Значение,(м/с)</string>
    <string name="find_in_avito">Найти в Авито</string>

</resources>