<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/greetings"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_greetings_second" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="48dp"
        android:background="#1A000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView_navi_ind_1"
            android:background="#1A000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/swipe_indicator_passive"
            android:contentDescription="@string/navigation_indicator_1"/>

        <ImageView
            android:id="@+id/imageView_navi_ind_2"
            android:background="#1A000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/view_pager_navi_points_margin_start"
            app:srcCompat="@drawable/swipe_indicator_active"
            android:contentDescription="@string/navigation_indicator_2"/>

        <ImageView
            android:id="@+id/imageView_navi_ind_3"
            android:background="#1A000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/swipe_indicator_passive"
            android:layout_marginStart="@dimen/view_pager_navi_points_margin_start"
            android:contentDescription="@string/navigation_indicator_3"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/greetingsTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/greeting_text_marginStart"
        android:background="#1A000000"
        android:gravity="center"
        android:textSize="@dimen/greetings_second_textSize"
        android:text="@string/greetings_second_text"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/barrier_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="guideline_vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>