<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/pressure_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_pressure_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/pressure"
            style="@style/WeatherHeaderTextStyle" />

        <TextView
            android:id="@+id/textView_pressure_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/value"
            android:textSize="@dimen/fc_header_value_textSize" />

        <TextView
            android:id="@+id/textView_pressure_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:text="@string/dim_mm_r_s"
            style="@style/WeatherHeaderTextStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/weather_temperature_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_wind"
        app:layout_constraintStart_toStartOf="@+id/guideline_pressure"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fc_header_weather_icon_height"
            android:layout_weight="1"
            android:minWidth="@dimen/fc_header_weather_icon_min_WH"
            android:minHeight="@dimen/fc_header_weather_icon_min_WH"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_wind_default" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/textView_temp_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/temperature"
                android:textFontWeight="1"
                style="@style/WeatherHeaderTempDescTextStyle"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView_temp_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:textFontWeight="2"
            style="@style/WeatherHeaderTempValueTextStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/wind_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_wind"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_wind_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wind"
            style="@style/WeatherHeaderTextStyle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minWidth="@dimen/fc_header_wind_icon_min_WH"
            android:minHeight="@dimen/fc_header_wind_icon_min_WH"
            app:srcCompat="@drawable/ic_wind_n" />

        <TextView
            android:id="@+id/textView_wind_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/WeatherHeaderTextStyle"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_pressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="guideline_pressure"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="guideline_wind"/>

</androidx.constraintlayout.widget.ConstraintLayout>